# orpheus

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat  build.sh  mcp_bridge.js
.github/workflows/: release.yml
cmake/: Dependencies.cmake  EmbedResources.cmake  Version.cmake  version.h.in
resources/: orpheus.manifest  orpheus.rc
src/: main.cpp
src/analysis/: disassembler.cpp  disassembler.h  memory_watcher.cpp  memory_watcher.h  pattern_scanner.cpp  pattern_scanner.h  pe_dumper.cpp  pe_dumper.h  rtti_parser.cpp  rtti_parser.h  string_scanner.cpp  string_scanner.h  write_finder.cpp  write_finder.h
src/core/: dma_interface.cpp  dma_interface.h  memory_cache.cpp  memory_cache.h  orpheus_api.cpp  orpheus_api.h  orpheus_core.cpp  orpheus_core.h  runtime_manager.cpp  runtime_manager.h  task_manager.cpp
src/decompiler/: decompiler.cc  decompiler.hh  type_injector.cc
src/dumper/: cs2_schema.cpp  cs2_schema.h
src/emulation/: emulator.cpp  emulator.h
src/installer/: installer_app.cpp  installer_app.h  installer_main.cpp
src/mcp/: mcp_handlers_analysis.cpp  mcp_handlers_bookmarks.cpp  mcp_handlers_cfg.cpp  mcp_handlers_cs2_entity.cpp  mcp_handlers_cs2_schema.cpp  mcp_handlers_emulation.cpp  mcp_handlers_eval.cpp  mcp_handlers_functions.cpp  mcp_handlers_introspection.cpp  mcp_handlers_memory.cpp  mcp_handlers_memory_diff.cpp  mcp_handlers_rtti.cpp  mcp_handlers_scan.cpp  mcp_handlers_telemetry.cpp  mcp_server.cpp  mcp_server.h
src/ui/: application.cpp  application.h  icons.h  layout_constants.h  panel_helpers.h
src/ui/panels/: dialog_about.cpp  dialog_command_palette.cpp  dialog_dump.cpp  dialog_goto.cpp  dialog_settings.cpp  dialog_udev.cpp  panel_bookmarks.cpp  panel_cache_manager.cpp  panel_cfg_viewer.cpp  panel_console.cpp  panel_cs2_dashboard.cpp  panel_cs2_entity_inspector.cpp  panel_cs2_radar.cpp  panel_cs2_schema.cpp  panel_decompiler.cpp  panel_disassembly.cpp  panel_emulator.cpp  panel_function_recovery.cpp  panel_memory_regions.cpp  panel_memory_viewer.cpp  panel_memory_watcher.cpp  panel_module_list.cpp  panel_pattern_scanner.cpp  panel_pointer_chain.cpp  panel_process_list.cpp  panel_rtti_scanner.cpp  panel_string_scanner.cpp  panel_task_manager.cpp  panel_vtable_reader.cpp  panel_write_tracer.cpp  panel_xref_finder.cpp  toolbar.cpp
src/utils/: bookmarks.cpp  bookmarks.h  expression_evaluator.cpp  limits.h  logger.cpp  logger.h  request_validator.h  search_history.cpp  search_history.h  telemetry.cpp  telemetry.h
tests/: test_bookmarks.cpp  test_expression_evaluator.cpp  test_memory_cache.cpp  test_pattern_scanner.cpp
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
ui/src/api/: client.ts  types.ts
ui/src/components/: CommandPalette.tsx  ContextMenu.tsx  Layout.tsx  Toast.tsx
ui/src/hooks/: useBookmarks.ts  useCFG.ts  useCS2.ts  useCacheManager.ts  useConnection.ts  useContextMenu.ts  useDecompiler.ts  useDisassembly.ts  useDma.tsx  useEmulator.ts  useFunctionRecovery.ts  useLogger.ts  useMemory.ts  useMemoryRegions.ts  useModules.ts  usePatternScan.ts  usePointerChain.ts  useProcess.tsx  useProcesses.ts  useRTTI.ts  useSnapshots.ts  useStringScan.ts  useTasks.ts  useToast.tsx  useVTableReader.ts  useWriteTracer.ts  useXrefs.ts
ui/src/panels/: Bookmarks.tsx  CFGViewer.tsx  CS2Inspector.tsx  CacheManager.tsx  Console.tsx  Decompiler.tsx  Disassembly.tsx  Emulator.tsx  ExpressionEval.tsx  FunctionRecovery.tsx  MemoryDiff.tsx  MemoryRegions.tsx  MemoryViewer.tsx  MemoryWriter.tsx  ModuleBrowser.tsx  PatternScanner.tsx  PointerChain.tsx  ProcessList.tsx  RTTIScanner.tsx  Settings.tsx  StringScanner.tsx  TaskManager.tsx  VTableReader.tsx  WriteTracer.tsx  XrefFinder.tsx
